# plugg

./: README.md
py/: .gitignore  .gitleaks.toml  README.md  pyproject.toml
py/src/plugg/: __init__.py  core.py
py/tests/: test_core.py
ts/: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsup.config.ts
ts/docs/fixtures/fabric-conformance/principal/basic/: principal.json
